--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "cryptr": "^6.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
